--- a/Javascript-Achievements/Achievements/JSB2L2.html
+++ b/Javascript-Achievements/Achievements/JSB2L2.html
@@ -5,57 +5,57 @@
 </head>
 <table>
   <tr>
-    <td>1</td>
+    <td style="background-color:black;"0 td>
     <td>2</td>
-    <td>3</td>
+    <td style="background-color:black;"3 td></td>
     <td>4</td>
-    <td>5</td>
+    <td style="background-color:black;"5 td></td>
 	  <td>6</td>
-    <td>7</td>
+    <td style="background-color:black;"7 td></td>
     <td>8</td>
   </tr>
   <tr>
     <td>1</td>
-    <td>2</td>
+    <td style="background-color:black;"2 td></td>
     <td>3</td>
-    <td>4</td>
+    <td style="background-color:black;"4 td></td>
     <td>5</td>
+  	<td style="background-color:black;"6 td></td>
+    <td>7</td>
+    <td style="background-color:black;"8 td></td>
+  </tr>
+  <tr>
+    <td style="background-color:black;"1 td></td>
+    <td>2</td>
+    <td style="background-color:black;"3 td></td>
+    <td>4</td>
+    <td style="background-color:black;"5 td></td>
   	<td>6</td>
-    <td>7</td>
+    <td style="background-color:black;"7 td></td>
     <td>8</td>
   </tr>
   <tr>
     <td>1</td>
-    <td>2</td>
+    <td style="background-color:black;"2 td></td>
     <td>3</td>
-    <td>4</td>
+    <td style="background-color:black;"4 td></td>
     <td>5</td>
+   	<td style="background-color:black;"6 td></td>
+    <td>7</td>
+    <td style="background-color:black;"8 td></td>
+  </tr>
+  <tr>
+    <td style="background-color:black;"1 td></td>
+    <td>2</td>
+    <td style="background-color:black;"3 td></td>
+    <td>4</td>
+    <td style="background-color:black;"5 td></td>
   	<td>6</td>
-    <td>7</td>
-    <td>8</td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-    <td>4</td>
-    <td>5</td>
-   	<td>6</td>
-    <td>7</td>
-    <td>8</td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-    <td>4</td>
-    <td>5</td>
-  	<td>6</td>
-    <td>7</td>
+    <td style="background-color:black;"7 td></td>
     <td>8</td>
   </tr>
 </table>
 
-<script> src="script2.js"></script>
+<script> rc="script2.js"></script> 
 
 </html>
