--- a/Javascript-Achievements/index.html
+++ b/Javascript-Achievements/index.html
@@ -47,19 +47,20 @@
         <h2>Les 2: HTML5</h3>
         <ul>
             <li><a href="Achievements/turtle.html">Turtle achievement</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="Achievements/start_1.html">Functions achievement</a></li>
+            <li><a href="Achievements/JSB2L2.html">Checkerboard achievement</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="Achievements/TTS.html">Text-To-Speech achievement</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="Achievements/ma-webxr/index.html">WebXR Demo achievement</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
