--- a/Javascript-Achievements/Achievements/start_1.html
+++ b/Javascript-Achievements/Achievements/start_1.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Functions</title>
         <style>body{ font-family: monospace;} </style>
+        <link rel="stylesheet" href="Style3.css">
     </head>
 
     <body>
@@ -22,6 +23,6 @@
         <br><br>
         Delen <span id ="delen">....</span>
         <!-- javascript -->       
-        <script src="script1.js"></script>
+        <script src="script3.js"></script>
     </body>
 </html>
